# video-frame-extractor

./: .gitignore  MANIFEST.in  README.md  app.py  build.sh  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-publish.yml
tests/: __init__.py  test_extractor.py  test_utils.py
video_frame_extractor/: __init__.py  cli.py  extractor.py  player.py  setup.py  utils.py
